--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1069,6 +1069,7 @@ input:checked ~ .dot .active {
 
 .px-4 {
   padding-left: 1rem;
+  padding-right padding-left: 1rem;
   padding-right: 1rem;
 }
 
